--- a/resume_style.css
+++ b/resume_style.css
@@ -129,10 +129,11 @@ section:nth-child(2n + 1) {
 
     height: auto;
     width: 100%;
+	margin-left: 10px;
 	border: 2px black solid;
-	background-image:linear-gradient(white,green,grey,blue) ;
+	/*background-image:linear-gradient(white,green,grey,blue) ; */
 
-	color:white;
+	color:black;
 	overflow-wrap: break-word;
 }
 
